--- a/machine.html
+++ b/machine.html
@@ -47,7 +47,7 @@
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/o7aaafwl'>Numbrs Personal Finance AG Careers - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/centralway/job/o7aaafwl'>Numbrs Personal Finance AG Careers - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light">Paris Paris</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://mtailor.workable.com/j/86AB8197A4'>MTailor - Jobs: ML (Machine Learning) and Backend Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mtailor.workable.com/j/86AB8197A4'>MTailor - Jobs: ML (Machine Learning) and Backend Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -89,7 +89,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692174993-machine-learning-ai-architect'>CapTech Consulting Machine Learning &amp; AI Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692174993-machine-learning-ai-architect'>CapTech Consulting Machine Learning &amp; AI Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -98,7 +98,7 @@
 <p>4 days ago ... Advertima AG has a job opening for Computer Vision & Machine Learning 
 Engineer (m/f) in Tech-Startup (ZH/SG) in St. Gallen (published: 27.06.2019).</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aifoundation/3eb05c48-efc6-4226-ba37-caf2214ab815'>AI Foundation - Machine Learning Infrastructure Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aifoundation/3eb05c48-efc6-4226-ba37-caf2214ab815'>AI Foundation - Machine Learning Infrastructure Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -168,7 +168,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/data-scientist-11714'>Data Scientist (Machine Learning) - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/data-scientist-11714'>Data Scientist (Machine Learning) - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... This position requires extensive background and knowledge in machine learning 
 and data science. A successful candidate should also have previous?...</p>
@@ -213,7 +213,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Senior Machine Learning Engineer at Codete.</p>
 <hr/>
-<h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C?viewed=true'>Machine Learning / AI / Big Data Engineer ... - Atypon Systems - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C?viewed=true'>Machine Learning / AI / Big Data Engineer ... - Atypon Systems - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Machine Learning / AI / Big Data Engineer, Athens at 
 Atypon Systems.</p>
@@ -241,7 +241,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C'>Atypon Systems - Jobs: Machine Learning / AI / Big Data Engineer, Athens - Apply online</a></h5> 
+<h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C'>Atypon Systems - Jobs: Machine Learning / AI / Big Data Engineer, Athens - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -258,7 +258,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999691792887-machine-learning-engineer-m-f-d-'>Smaato Inc. Machine Learning Engineer (m/f/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999691792887-machine-learning-engineer-m-f-d-'>Smaato Inc. Machine Learning Engineer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -267,7 +267,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p>Jul 9, 2019 ... Interested to learn more about it? Let's chat. Especially if: - Research experience 
 in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <hr/>
-<h5><a href='https://opentextats.avature.net/careers/JobDetail/Montreal-QC-Canada-Technical-Product-Manager-Machine-Learning/24917'>Technical Product Manager - Machine Learning - Canada, QC, Montreal - 24917</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opentextats.avature.net/careers/JobDetail/Montreal-QC-Canada-Technical-Product-Manager-Machine-Learning/24917'>Technical Product Manager - Machine Learning - Canada, QC, Montreal - 24917</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -308,7 +308,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mercari.workable.com/j/DEB330A0B9?viewed=true'>Software Engineer, Machine Learning [New Graduate Position]</a></h5> 
+<h5><a href='https://mercari.workable.com/j/DEB330A0B9?viewed=true'>Software Engineer, Machine Learning [New Graduate Position]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 ?? ... Apply online for the job of Software Engineer, Machine Learning [New Graduate 
 Position] at Mercari, inc.</p>
@@ -452,7 +452,7 @@ learning models and improve existing ones to enhance our network detection?...</
 <p><span class="badge badge-light">Minsk</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/forethought/e73b2546-7a59-49e4-a8a7-550296640e28'>Forethought - Software Engineer, Backend &amp; Machine Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/forethought/e73b2546-7a59-49e4-a8a7-550296640e28'>Forethought - Software Engineer, Backend &amp; Machine Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -472,7 +472,7 @@ learning models and improve existing ones to enhance our network detection?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
